Refactored name of model attribute for clarity and added condition for chat to appear

--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -17,7 +17,8 @@
                     <table>
                         <tr>
                             <th>
-                                <p class="font-normal text-gray-700  dark:text-gray-400" th:text="${companyProfile.website}"></p>
+                                <p class="font-normal text-gray-700  dark:text-gray-400"
+                                   th:text="${companyProfile.website}"></p>
                             </th>
                             <th>
                                 <p class="ml-40  font-normal  text-gray-700 dark:text-gray-400"
@@ -29,57 +30,70 @@
                         </tr>
                         <tr>
                             <td>
-                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${companyProfile.speciality}"></p>
+                                <p class="font-normal  text-gray-700 dark:text-gray-400"
+                                   th:text="${companyProfile.speciality}"></p>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${companyProfile.location}"></p>
+                                <p class="font-normal  text-gray-700 dark:text-gray-400"
+                                   th:text="${companyProfile.location}"></p>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <p th:if="${currentAppUser.role.toString() == 'COMPANY' and currentAppUser.verificationStatus == true}">&#10004;</p>
+                                <p th:if="${currentAppUser.role.toString() == 'COMPANY' and currentAppUser.verificationStatus == true}">
+                                    &#10004;</p>
                             </td>
                         </tr>
                     </table>
                 </div>
 
-                <form th:if="${myRole.toString() != 'ADMIN' and !isConnectedWith and !isPendingConnectionWhenSentConnection and !isPendingConnectionWhenReceivingConnection and !showControls}" th:action="@{/connect}" method="post">
+                <form th:if="${myRole.toString() != 'ADMIN' and !isConnectedWith and !isPendingConnectionWhenSentConnection and !isPendingConnectionWhenReceivingConnection and !isAuthedUserProfile}"
+                      th:action="@{/connect}" method="post">
                     <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Connect</button>
                 </form>
 
-                <button th:if="${myRole.toString() != 'ADMIN' and isPendingConnectionWhenSentConnection}" class="btn bg-black btn-black font-sans text-sm w-25 h-9 p-0" disabled>Pending</button>
+                <button th:if="${myRole.toString() != 'ADMIN' and isPendingConnectionWhenSentConnection}"
+                        class="btn bg-black btn-black font-sans text-sm w-25 h-9 p-0" disabled>Pending
+                </button>
 
                 <form th:if="${myRole.toString() != 'ADMIN'}" th:action="@{/connection/accept}" method="post">
-                    <input type="hidden" name="id" th:value="${currentAppUser.id}" />
-                    <button th:if="${isPendingConnectionWhenReceivingConnection}" class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Accept</button>
+                    <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
+                    <button th:if="${isPendingConnectionWhenReceivingConnection}"
+                            class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Accept
+                    </button>
                 </form>
 
-                <form th:if="${myRole.toString() != 'ADMIN' and isConnectedWith}" th:action="@{/disconnect}" method="post">
+                <form th:if="${myRole.toString() != 'ADMIN' and isConnectedWith}" th:action="@{/disconnect}"
+                      method="post">
                     <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect
                     </button>
                 </form>
-                <form th:if="${myRole.toString() != 'ADMIN'}" th:action="@{/chat/create}" method="post">
-                    <input type="hidden" name="id" th:value="${currentAppUser.id}" />
+                <form th:if="${myRole.toString() != 'ADMIN' and !isAuthedUserProfile}" th:action="@{/chat/create}"
+                      method="post">
+                    <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Chat</button>
                 </form>
 
-                <form th:if="${currentAppUser.role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and currentAppUser.verificationStatus == false}" th:action="@{/admin/verifyCompany}" method="post">
-                    <input type="hidden" name="companyUserId" th:value="${currentAppUser.id}" />
+                <form th:if="${currentAppUser.role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and currentAppUser.verificationStatus == false}"
+                      th:action="@{/admin/verifyCompany}" method="post">
+                    <input type="hidden" name="companyUserId" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Mark</button>
                 </form>
 
-                <form th:if="${currentAppUser.role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and currentAppUser.verificationStatus == true}" th:action="@{/admin/unverifyCompany}" method="post">
-                    <input type="hidden" name="companyUserId" th:value="${currentAppUser.id}" />
+                <form th:if="${currentAppUser.role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and currentAppUser.verificationStatus == true}"
+                      th:action="@{/admin/unverifyCompany}" method="post">
+                    <input type="hidden" name="companyUserId" th:value="${currentAppUser.id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Unmark</button>
                 </form>
             </div>
         </div>
 
-        <div th:if="${showControls}" class="max-w-lg h-[8rem] bg-neutral-100   mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow">
+        <div th:if="${isAuthedUserProfile}"
+             class="max-w-lg h-[8rem] bg-neutral-100   mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow">
             <div class="pr-10 pb-10 pl-10 pt-5 ">
                 <a th:href="@{/company/update}" class=" text-left text-xl  font-normal  text-gray-900">
                     Edit Public Profile
@@ -90,7 +104,6 @@
             </div>
         </div>
     </div>
-
 
 
     <div class="pl-32 mb-5 mt-8">
@@ -104,14 +117,14 @@
                 <tr>
                     <td>
                         <div class="max-h-96 overflow-y-auto">
-                            <p class="font-normal ml-3 py-3 px-4 mr-2 mb-2 resize-y text-gray-700" th:text="${companyProfile.description}"></p>
+                            <p class="font-normal ml-3 py-3 px-4 mr-2 mb-2 resize-y text-gray-700"
+                               th:text="${companyProfile.description}"></p>
                         </div>
                     </td>
                 </tr>
             </table>
         </div>
     </div>
-
 
 
 </div>
