--- a/synapsis/src/main/resources/templates/pages/login.html
+++ b/synapsis/src/main/resources/templates/pages/login.html
@@ -36,7 +36,7 @@
         <p th:if="${param.logout}" class="bg-light shadow-lg border border-grey rounded-md text-center m-4 p-4">You have
             successfully logged out</p>
         <div class="flex flex-row justify-center content-center mt-24 w-full">
-            <div class="hidden md:flex lg:flex w-9/10 md:w-1/2 lg:w-2/3 mr-4 justify-center">
+            <div class="hidden md:flex lg:flex w-9/10 md:w-1/2 lg:w-2/3 mr-4 justify-center max-w-4xl">
                 <img src="../../assets/hero1.png" alt="Hero Image">
             </div>
             <div class="flex flex-row flex-wrap justify-center content-center mt-8 w-80 border rounded-sm">
