--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -73,7 +73,7 @@
     <div th:if="${role.toString()=='CANDIDATE'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
       <!--Add link below-->
       <div th:if="${isJobSubmitted}">
-        <button class="inline-block px-4 py-2 text-white bg-red-900 rounded-full" disabled>Submitted</button>
+        <button class="inline-block px-4 py-2 text-white bg-primary-variant rounded-full" disabled>Submitted</button>
       </div>
       <div th:unless="${isJobSubmitted}">
         <a th:href="@{/jobapplication/{id}(id=${jobId})}" class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now at Synapsis</a>
