--- a/synapsis/src/main/resources/templates/pages/savedjobs.html
+++ b/synapsis/src/main/resources/templates/pages/savedjobs.html
@@ -5,8 +5,9 @@
 
   <div class="w-1/2 mx-auto">
     <div class="mx-auto">
-      <a th:href="@{/jobs}" class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Back</a>
       <p class="text-2xl font-serif font-black-variant font-thin mb-4 text-center">Saved Jobs</p>
+      <a th:href="@{/jobs}" class="btn btn-primary bg-primary text-base mb-2 mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Back to Jobs Page</a>
+
 
       <div th:if="${jobs.size() == 0}">
         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
@@ -32,12 +33,6 @@
 
 
           <div class="flex mt-auto justify-evenly">
-              <form th:action="@{/deletesavedjob}" method="post">
-                <input type="hidden" name="jobId" th:value="${job.get().getID()}" />
-                <button class="text-white bg-primary mx-auto p-4 rounded-2xl
-                  hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i class="fa-solid fa-bookmark"></i></button>
-              </form>
-
                <div th:if="${jobsSubmitted.contains(job.get())}">
                  <button class="inline-block px-4 py-4 text-white bg-primary-variant rounded-2xl" disabled>Submitted</button>
                </div>
@@ -45,6 +40,12 @@
                <div th:unless="${jobsSubmitted.contains(job.get())}">
                  <a th:href="@{/jobapplication/{id}(id=${job.get().getID()})}" class="inline-block px-4 py-4 text-white bg-primary rounded-2xl">Apply</a>
                </div>
+
+              <form th:action="@{/deletesavedjob}" method="post">
+                <input type="hidden" name="jobId" th:value="${job.get().getID()}" />
+                <button class="text-white bg-primary mx-auto p-4 rounded-2xl
+                    hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i class="fa-solid fa-bookmark"></i></button>
+              </form>
           </div>
 
         </div>
