--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -59,7 +59,8 @@
                         </button>
                     </form>
 
-                    <form th:if="${myRole.toString() != 'ADMIN'}" th:action="@{/chat/create}" method="post">
+                    <form th:if="${myRole.toString() != 'ADMIN' and !isAuthedUserProfile}" th:action="@{/chat/create}"
+                          method="post">
                         <input type="hidden" name="id" th:value="${currentAppUser.id}"/>
                         <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0 mb-4" type="submit">Chat
                         </button>
