#261 added security and changed font colour for our services page

--- a/synapsis/src/main/resources/templates/pages/ourServices.html
+++ b/synapsis/src/main/resources/templates/pages/ourServices.html
@@ -8,13 +8,13 @@
     <h2 class="text-left text-4xl">Our Services</h2>
     <hr class="border-t border-grey-light">
     <br>
-    <ul class=" text-xl  list-disc list-inside ">
+    <ul class=" text-xl   text-grey list-disc list-inside ">
       <li>Connecting with users including recruiters and companies.</li>
       <li>Messaging to other users including sending files and images.</li>
       <li>Searching and applying to internal (via Synapsis) and external jobs.</li>
       <li>Posting jobs and advertising them.</li>
       <li>Having access job alerts and suggestions.</li>
-      <li>Filtering jobs and saving them and much more! </li>
+      <li>Filtering jobs and saving them and much more ! </li>
     </ul>
   </div>
 </div>
